@@ -8,6 +8,7 @@ Revision history for Perl extension PGXN::API
       - Added a link to the API docs to the default `index.html` file.
       - Renamed the `{char}` variable in the `userlist` URI template to
         `{letter}`, since it better describes the value (an ASCII letter a-z).
+      - Search parameters must be submitted via a GET request.
 
 0.12.6  2011-04-27T18:52:18
       - Eliminated "Use of uninitialized variable in soubroutine" warning when
